// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Trackey's trackEvent destination action: all fields 1`] = `
Object {
  "event": ")6YuL#JK44tb69K",
  "groupId": Object {
    "testType": ")6YuL#JK44tb69K",
  },
  "messageId": ")6YuL#JK44tb69K",
  "properties": Object {
    "testType": ")6YuL#JK44tb69K",
  },
  "timestamp": ")6YuL#JK44tb69K",
  "userId": ")6YuL#JK44tb69K",
}
`;

exports[`Testing snapshot for Trackey's trackEvent destination action: required fields 1`] = `
Object {
  "event": ")6YuL#JK44tb69K",
  "timestamp": ")6YuL#JK44tb69K",
  "userId": ")6YuL#JK44tb69K",
}
`;
